# ChangeLog for perl-core/Text-Balanced
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/ChangeLog,v 1.28 2009/05/12 13:01:31 aballier Exp $

  12 May 2009; Alexis Ballier <aballier@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  keyword ~x86-fbsd

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Text-Balanced-1.95.ebuild,
  -Text-Balanced-1.98.ebuild:
  Cleanup

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Text-Balanced-1.98.ebuild,
  Text-Balanced-2.0.0.ebuild:
  New virtuals: module-build version

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Text-Balanced-2.0.0.ebuild:
  Stable for HPPA too.

  12 Aug 2007; Tom Gall <tgall@gentoo.org> Text-Balanced-2.0.0.ebuild:
  stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> Text-Balanced-2.0.0.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> Text-Balanced-2.0.0.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Text-Balanced-1.98.ebuild:
  Stable on ppc64

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  Marking stable amd64

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  Re-add ~alpha as per bug #161486

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-Balanced-1.98.ebuild:
  Stable on x86, bug #169153.

  26 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  Bug 161486, tested on swarm, keywording ~mips

  30 Jan 2007; Jeroen Roovers <jer@gentoo.org> Text-Balanced-2.0.0.ebuild:
  Marked ~hppa (bug #161486).

  11 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Balanced-2.0.0.ebuild:
  Bad keywords - need to file a bug or two on this
