@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST Text-Balanced-2.02.tar.gz 48477 RMD160 0ce1208573ab230f8b8f0e482a08e0835e2bf572 SHA1 cbbcf774dc39f844d789e66a6569f0ab8fd0cbcf SHA256 a77c7542a2f77970fbabd97c75632643e9c9c2106e5e132021e05ea9855a75b4
 DIST Text-Balanced-v2.0.0.tar.gz 29466 RMD160 28a1728d874eb922d3751e748d7312a2950d3bd5 SHA1 7596d768e35e34013fb59526b9672a206b31816f SHA256 f2b09b236bf86bc516004a4d92d005d3cfa5aa1069c7cb1348c08bcd949f6156
 EBUILD Text-Balanced-2.0.0.ebuild 692 RMD160 dbc624d25452a230320b4a6a1a542ca84d2087c5 SHA1 8655ecf82e7f05d6a24e2c34336da865d69b3007 SHA256 179eaa1215f5567a3be5ada30949f788cd9aba970e8f52b97d3ab917e8964284
-MISC ChangeLog 4382 RMD160 791f58613aebd9fa33ac39ff30db01bf4869a592 SHA1 41a806b77891d7954b283779961d0cfd7c166cac SHA256 2e51750fa9a47741a8a9f6d5a8e213458ccd3b2797b314fc8ac118ef84c75c34
+EBUILD Text-Balanced-2.02.ebuild 460 RMD160 a559169f1a1d3eca6cf702e10bcad8edeb20fc5f SHA1 4bacc97487f4bd469dbd885d2c68eb86ba0e4fc6 SHA256 218fd67de071f7944ebbe6e3fa2d1e03f764dcc52366fa7f8b425320ccbaf1b1
+MISC ChangeLog 4505 RMD160 cb3c8b26b9dda5d8f3cd93bd79ccd324fa61d958 SHA1 6352ca0421e9df3b960ffc4acbc759a71bd1c3f2 SHA256 bcbf9d0dd7e01add5b6ac70bf24628e799a2ea6c84163ee64d553ccdd19768c6
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoJcy4ACgkQvFcC4BYPU0raTACeNEFXe/uDATCZV0LS5kgMIwnb
-ZT0An15cb00Dn0LoEjP1t8WTL22pINV+
-=50j9
+iEYEARECAAYFAkp1358ACgkQV3J2n04EauxUhwCgsnQRzSl6JNAcQUXfjVh42lPj
+PjUAoIrYrk9jlyO2vh+BbGSoVKppSbhW
+=5h6J
 -----END PGP SIGNATURE-----
