@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/Text-Balanced-2.02.ebuild,v 1.1 2009/08/02 18:48:58 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=ADAMK
+inherit perl-module
+
+DESCRIPTION="Extract balanced-delimiter substrings"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+SRC_TEST=do
