@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Text-Balanced
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/ChangeLog,v 1.28 2009/05/12 13:01:31 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Text-Balanced/ChangeLog,v 1.29 2009/08/02 18:48:58 tove Exp $
+
+*Text-Balanced-2.02 (02 Aug 2009)
+
+  02 Aug 2009; Torsten Veller <tove@gentoo.org> +Text-Balanced-2.02.ebuild:
+  Version bump
 
   12 May 2009; Alexis Ballier <aballier@gentoo.org>
   Text-Balanced-2.0.0.ebuild:
